--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "json-loader": "^0.5.4",
     "ringcentral": "^3.0.0-rc1",
     "ringcentral-client": "https://github.com/u9520107/ringcentral-js-client.git#internal-build",
-    "ringcentral-web-phone": "https://github.com/changbenny/ringcentral-web-phone",
+    "ringcentral-web-phone": "https://github.com/changbenny/ringcentral-web-phone#audio-helper",
     "source-map-support": "^0.4.0",
     "through2": "^2.0.1",
     "webpack": "^1.12.14",
@@ -58,7 +58,7 @@
     "babel-runtime": "^6.6.1",
     "ringcentral": "^3.0.0-rc1",
     "ringcentral-client": "https://github.com/u9520107/ringcentral-js-client.git#internal-build",
-    "ringcentral-web-phone": "https://github.com/changbenny/ringcentral-web-phone"
+    "ringcentral-web-phone": "https://github.com/changbenny/ringcentral-web-phone#audio-helper"
   },
   "dependencies": {
     "redux": "^3.5.2",
