--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "gulp-sourcemaps": "^2.0.0-alpha",
     "json-loader": "^0.5.4",
     "ringcentral": "^3.0.0-rc1",
-    "ringcentral-client": "https://github.com/u9520107/ringcentral-js-client.git#internal-build",
-    "ringcentral-web-phone": "https://github.com/changbenny/ringcentral-web-phone#audio-helper",
+    "ringcentral-client": "https://github.com/changbenny/ringcentral-js-client.git#working",
+    "ringcentral-web-phone": "https://github.com/ringcentral/ringcentral-web-phone",
     "source-map-support": "^0.4.0",
     "through2": "^2.0.1",
     "webpack": "^1.12.14",
@@ -57,8 +57,8 @@
   "peerDependencies": {
     "babel-runtime": "^6.6.1",
     "ringcentral": "^3.0.0-rc1",
-    "ringcentral-client": "https://github.com/u9520107/ringcentral-js-client.git#internal-build",
-    "ringcentral-web-phone": "https://github.com/changbenny/ringcentral-web-phone#audio-helper"
+    "ringcentral-client": "https://github.com/changbenny/ringcentral-js-client.git#working",
+    "ringcentral-web-phone": "https://github.com/ringcentral/ringcentral-web-phone"
   },
   "dependencies": {
     "redux": "^3.5.2",
