--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     "source-map-support": "^0.4.0",
     "through2": "^2.0.1",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "ringcentral": "https://github.com/u9520107/ringcentral-js.git#latest-dev-build",
+    "ringcentral-client": "https://github.com/zengfenfei/ringcentral-js-client#releases",
+    "ringcentral-web-phone": "https://github.com/changbenny/ringcentral-web-phone#audio-helper"
   },
   "peerDependencies": {
     "babel-runtime": "^6.6.1",
@@ -61,9 +64,6 @@
     "ringcentral-web-phone": "https://github.com/changbenny/ringcentral-web-phone#audio-helper"
   },
   "dependencies": {
-    "ringcentral": "https://github.com/u9520107/ringcentral-js.git#latest-dev-build",
-    "ringcentral-client": "https://github.com/zengfenfei/ringcentral-js-client#releases",
-    "ringcentral-web-phone": "https://github.com/changbenny/ringcentral-web-phone#audio-helper",
     "data-types": "git+https://github.com/u9520107/data-types.git#release",
     "loganberry": "^0.9.1",
     "redux": "^3.5.2",
